// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<p
  class="sc-bdnxRM heVfDC sc-jrsJWt hdOySf"
  data-testid="title"
>
  wednesday
</p>
`;

exports[` 2`] = `
<span
  class="ant-badge sc-jSFjdj bBYqLn"
  data-testid="notification-badge"
>
  <span
    aria-label="bell"
    class="anticon anticon-bell sc-eCApnc cFEzwn"
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="bell"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M816 768h-24V428c0-141.1-104.3-257.7-240-277.1V112c0-22.1-17.9-40-40-40s-40 17.9-40 40v38.9c-135.7 19.4-240 136-240 277.1v340h-24c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h216c0 61.8 50.2 112 112 112s112-50.2 112-112h216c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM512 888c-26.5 0-48-21.5-48-48h96c0 26.5-21.5 48-48 48zM304 768V428c0-55.6 21.6-107.8 60.9-147.1S456.4 220 512 220c55.6 0 107.8 21.6 147.1 60.9S720 372.4 720 428v340H304z"
      />
    </svg>
  </span>
</span>
`;

exports[`<Header /> should render and match the snapshot 1`] = `
<body>
  <div>
    <header
      class="ant-layout-header sc-gsTCUz fNPrnw"
      data-testid="header"
      intl="[object Object]"
    >
      <img
        class="sc-dlfnbm fruiyx"
        data-testid="logo"
      />
      <p
        class="sc-bdnxRM heVfDC sc-jrsJWt hdOySf"
        data-testid="title"
      >
        wednesday
      </p>
      <div
        class="sc-hKFxyN cyCtHb"
      />
    </header>
  </div>
  <div>
    <header
      class="ant-layout-header sc-gtsrHT eKqqMW"
      data-testid="header"
      intl="[object Object]"
    >
      <img
        class="sc-dlnjwi UbOhE"
        data-testid="logo"
      />
      <div
        class="sc-hKFxyN cyCtHb"
      >
        <span
          class="ant-badge sc-jSFjdj bBYqLn"
          data-testid="notification-badge"
        >
          <span
            aria-label="bell"
            class="anticon anticon-bell sc-eCApnc cFEzwn"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="bell"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M816 768h-24V428c0-141.1-104.3-257.7-240-277.1V112c0-22.1-17.9-40-40-40s-40 17.9-40 40v38.9c-135.7 19.4-240 136-240 277.1v340h-24c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h216c0 61.8 50.2 112 112 112s112-50.2 112-112h216c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM512 888c-26.5 0-48-21.5-48-48h96c0 26.5-21.5 48-48 48zM304 768V428c0-55.6 21.6-107.8 60.9-147.1S456.4 220 512 220c55.6 0 107.8 21.6 147.1 60.9S720 372.4 720 428v340H304z"
              />
            </svg>
          </span>
        </span>
      </div>
    </header>
  </div>
  <div>
    <header
      class="ant-layout-header sc-gtsrHT eKqqMW"
      data-testid="header"
      intl="[object Object]"
    >
      <img
        class="sc-dlnjwi UbOhE"
        data-testid="logo"
      />
      <div
        class="sc-hKFxyN cyCtHb"
      />
    </header>
  </div>
</body>
`;
